# pybubble

./: .gitignore  README.md  build_backend.py  default-rootfs.dockerfile  pyproject.toml
docs/: build-rootfs.md  sandbox.md
src/pybubble/: __cli__.py  __init__.py  network.py  process.py  rootfs.py  sandbox.py
src/pybubble/data/: .gitignore
tests/: conftest.py  test_bubble.py  test_network.py  test_process.py  test_pty.py  test_rootfs.py  test_sandbox.py  test_sandbox_performance.py
