[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybubble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pybubble"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
